--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "express-validator": "^7.0.1",
     "mongoose": "^8.1.3",
     "nodemon": "^3.0.3",
-    "socket.io": "^4.7.4"
+    "socket.io": "^4.7.4",
+    "validator": "^13.11.0"
   }
 }
